--- a/Album/homepage.html
+++ b/Album/homepage.html
@@ -23,10 +23,10 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../Instruction.html">Introduction</a></li>
+						<li><a href="../Biography.html">Biography</a></li>
 						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 						<li><a href="../Notes/homepage.html">Notes</a></li>
-						<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+						<li><a href="../musical column/homepage.html">Musical Column</a></li>
 						<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
 						<li><a href="../Album/homepage.html">Album</a></li>
 					</ul>
@@ -73,19 +73,7 @@
 						}
 					 </style>
 
-					<script>
-						function showModal(image) {
-						var modal = document.getElementById("modal");
-						var modalImage = document.getElementById("modal-image");
-						modal.style.display = "block";
-						modalImage.src = image.src;
-						}
-					
-						function hideModal() {
-						var modal = document.getElementById("modal");
-						modal.style.display = "none";
-						}
-					</script>			
+		
 
 				<!-- Main -->
 					<div id="main">
@@ -129,11 +117,11 @@
 								</header>
 									<!-- Content -->
 								<details>
-									<summary class="major"><a>2023 月度总结</a></summary>
+									<summary class="major"><a>2023 年度总结 &emsp;Annual Summary</a></summary>
 									</br>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">										
-											<video controls="controls" poster="images\t3.jpg">
+											<video width="400" height="300" controls>
 											<source src="images/WeChat_20240121152453.mp4" type="video/mp4"></source></video>											 
 										</div>
 									</div>
@@ -171,6 +159,18 @@
 			<script src="../assets/js/breakpoints.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
-
+			<script>
+				function showModal(image) {
+				var modal = document.getElementById("modal");
+				var modalImage = document.getElementById("modal-image");
+				modal.style.display = "block";
+				modalImage.src = image.src;
+				}
+					
+				function hideModal() {
+				var modal = document.getElementById("modal");
+				modal.style.display = "none";
+				}
+			</script>	
 	</body>
 </html>
