--- a/Journal Entries/yibaoyanzhilu.html
+++ b/Journal Entries/yibaoyanzhilu.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>yibaoyanzhilu</title>
@@ -30,10 +25,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../Instruction.html">Introduction</a></li>
+							<li><a href="../Biography.html">Biography</a></li>
 							<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 							<li><a href="../Notes/homepage.html">Notes</a></li>
-							<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+							<li><a href="../musical column/homepage.html">Musical Column</a></li>
 							<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
 							<li><a href="../Album/homepage.html">Album</a></li>
 						</ul>
@@ -52,12 +47,12 @@
 										<h1>忆保研之路</h1>
 										<h2>2022.6.20</h2>
 									</header>
-									<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span> &emsp;&emsp;当我发出这条消息的时候，我的保研之旅也来到了终点。本来在想，等一切结束了要把所有想到的体会到的一一写出来，但当结果尘埃落定之时却感觉一时语塞不知从何说起，直至今日。
+									<p><span class="image left"><img src="images/11.jpg" alt="" /></span> &emsp;&emsp;当我发出这条消息的时候，我的保研之旅也来到了终点。本来在想，等一切结束了要把所有想到的体会到的一一写出来，但当结果尘埃落定之时却感觉一时语塞不知从何说起，直至今日。
 										至今都在感叹究竟是在怎样的焦虑、惶恐和担忧中度过过去的四个月。似乎以往一切的努力都是为了最后一个终极目标：夏令营。在成绩不是最拔尖的情况下，对知识的高度掌握和科研经历便成了我最重要的破局口。然而，这也意味着需要在有限的时间内完成所有堆叠在一起的事情：本学期课程的学习、十余门物理核心课的复习、量子光学的自学任务、一门研究生课程、专利撰写、做师兄推荐的实验以及夏令营申请材料的准备。<br />
 										&emsp;&emsp;保研的路是艰辛的，尤其对一心想去外面闯一闯的我来说。过去四个月没有什么丰富的生活回忆，只有每天独自坐在实验室里，听着旁边功放排风的声音，自烈日高照之后见到的便已是繁星满天。不得不说，高压之下人总会有犹豫、失落及彷徨的时候。如果说这一段时间让我发现自己有什么优点，那可能就是总能给自己找个理由坚持一些事吧。这一路走的孤独，所有问题也只能由一人来解决，但如今回想起来，却有了这个春天和夏天一段独属于我的不凡回忆。<br />
 										&emsp;&emsp;得益于知识储备还较为充足以及科研也有了一些微不足道的成果，我首先通过了中国科学院物理研究所的面试，也有幸拿到了2万元的入学奖学金，给自己想去北京学习的愿望打下了底。说回北京大学物理学院夏令营，入营者本就是各个高校最拔尖的保研学生，高手如云，我又一次开始不断的自我怀疑，1/4的录取比更让我觉得离愿望如此遥不可及。但如今想来宛如一场梦：半个小时的面试我只有一个前沿科研进展问题没有回答上，笔试抽中的两个题全部是量子力学，也是我花了最大心思啃的一门课。后来想了想朋友给我说的话，或许某种程度上这可能也算是偶然中的必然吧。
 										当然，在第二天接到老师电话的那一瞬间起，我用了半个小时从犹豫不决到做出去北大读博的决定，也就有了文字前那一张纪录。在优秀营员名单公布的时候，我也第一次真真切切感觉到：自己名字前面的“中国科学技术大学”是如此令人荣光。到今天考完最后一门课，我坐在教室打开备忘录，终于用直白的语句写下这一直想写的回忆，也算是对大学三年的一个最后总结了。不打算再细想什么词藻，借此机会，我更想用自己拙劣的文字，对这一路上帮过我的所有人致以最诚挚的感谢。</p>
-									<p><span class="image right"><img src="images/pic01.jpg" alt="" /></span> &emsp;&emsp;首先我想感谢我的父母，他们始终尊重并支持我的所有决定，也为我提供了最坚实的物质后盾，我才能够心无旁骛去追求自己想要的东西。<br />
+									<p><span class="image right"><img src="images/12.jpg" alt="" /></span> &emsp;&emsp;首先我想感谢我的父母，他们始终尊重并支持我的所有决定，也为我提供了最坚实的物质后盾，我才能够心无旁骛去追求自己想要的东西。<br />
 										&emsp;&emsp;我最想感谢我的本科科研导师：中国科大光学系孙方稳教授。孙老师从我进入实验室之后的每一步都给予我无数宝贵的建议，也为我提供了最为充分的资源去接触科研工作。在保研整个过程中孙老师更是给予了我最大的帮助和支持。能够接受孙老师的指导是我无比的荣幸，孙老师的谆谆教诲也令我受用终身，在此想再次和您真挚地说一声感谢！<br />
 										&emsp;&emsp;感谢我的师兄张少春博士，少春师兄用近一年的时间从零开始手把手指导我学习和实验，在我身上花费了大量的工作时间，不厌其烦地帮助我完成了光路搭建、软件模拟、硬件使用及理论学习的大量工作，也在我最为迷茫的时候为我排忧解惑。再次真诚感谢师兄对我的教导！也期望在之后能与师兄共同努力做出更多不错的工作！<br />
 										&emsp;&emsp;感谢我的朋友苏莘栋同学，苏莘栋和我从学期初便开始一同整理信息，相互鼓励交流，夏令营前我们也互相进行了模拟面试，他也帮助我解决了线上夏令营的场地问题，让我的这一路也走的不那么孤独。苏莘栋同学将保研至清华大学物理系继续攻读博士学位，恭喜苏莘栋！<br />
@@ -78,20 +73,20 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+							<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+							<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+							<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Copyright:SennerWang</li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
