--- a/Notes/homepage.html
+++ b/Notes/homepage.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Notes</title>
@@ -30,7 +25,7 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../Instruction.html">Introduction</a></li>
+						<li><a href="../Biography.html">Biography</a></li>
 						<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 						<li><a href="../Notes/homepage.html">Notes</a></li>
 						<li><a href="../musical column/homepage.html">Musical Column</a></li>
@@ -44,7 +39,7 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
+					<section id="banner" class="style3">
 						<div class="inner">
 							<span class="image">
 								<img src="../images/pic3.jpg" alt="" />
@@ -72,28 +67,27 @@
 										<div class="col-6 col-12-small">
 											<h3>Principle of Laser</br>激光原理</h3>
 											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
+												<li><a href="https://zhuanlan.zhihu.com/p/563563288">知乎</a>&nbsp&nbsp <a href="">pdf</a></li>
 											</ul>
 
 											<h3>Introduction to Quantum Information : Basic Knowledge&nbsp</br>量子信息导论基础</h3>
 											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
+												<li><a href="https://zhuanlan.zhihu.com/p/572313405">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
 											</ul>
 										</div>
 
 										<div class="col-6 col-12-small">
 											<h3>Quantum Mechanics Note I</br>量子力学笔记Ⅰ</h3>
 											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
+												<li><a href="https://zhuanlan.zhihu.com/p/650511113">知乎</a>&nbsp&nbsp <a href="documents/QuantumMechanicsNote1.pdf">pdf</a></li>
 											</ul>
 
 											<h3>Quantum Mechanics Note II</br>量子力学笔记Ⅱ</h3>
 											<ul>
-												<li><a href="#">知乎</a>&nbsp&nbsp <a href="#">pdf</a></li>
+												<li><a href="https://zhuanlan.zhihu.com/p/653839723">知乎</a>&nbsp&nbsp <a href="documents/QuantumMechanicsNote2.pdf">pdf</a></li>
 											</ul>
 										</div>
 									</div>
-
 								<hr class="major" />
 							</div>
 						</section>
@@ -105,14 +99,14 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+								<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+								<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+								<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+								<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
+								<li>&copy; Copyright:SennerWang</li>
 							</ul>
 						</div>
 					</footer>
