--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="Instruction.html">Introduction</a></li>
+							<li><a href="Biography.html">Biography</a></li>
 							<li><a href="Scientific Works/homepage.html">Scientific Works</a></li>
 							<li><a href="Notes/homepage.html">Notes</a></li>
-							<li><a href="Musical Column/homepage.html">Musical Column</a></li>
+							<li><a href="musical column/homepage.html">Musical Column</a></li>
 							<li><a href="Journal Entries/homepage.html">Journal Entries</a></li>
 							<li><a href="Album/homepage.html">Album</a></li>
 						</ul>
@@ -62,7 +62,7 @@
 										<img src="images/pic1.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Introduction.html" class="link">Introduction</a></h3>
+										<h3><a href="Biography.html" class="link">Biography</a></h3>
 										<p>Learn more about Me</p>
 									</header>
 								</article>
@@ -182,22 +182,20 @@
 					</section>
 
 				<!-- Footer -->
-				<!--
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Copyright:SennerWang</li>
-							</ul>
-						</div>
-					</footer>
-				-->
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+							<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+							<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+							<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Copyright:SennerWang</li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
