--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -36,7 +36,7 @@
 				</nav>
 	
 
-					<section id="banner" class="style2">
+					<section id="banner" class="style4">
 						<div class="inner">
 							<span class="image">
 								<img src="../images/pic4.jpg" alt="" />
@@ -66,14 +66,14 @@
 								<div class="inner">
 									<div class="row">
 										<div class="col-5 col-12-medium">
-											<a href="#"><span class="image fit"><img href="#" src="images/pic01.jpg" alt="" /></span></a>
+											<a href="Reviews/Name.html"><span class="image fit"><img href="Reviews/Name.html" src="images/pic01.jpg" alt="" /></span></a>
 										</div>
 										<div class="col-7 col-12-medium">
 											</br>
-											<h1 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h1>
+											<h1 align="center"><a href="Reviews/Name.html"><span style="font-size: 110%">Did You Know That There's a Tunnel Under Ocean Blvd</span></a></h1>
 											<h3 align="center">Lana Del Rey</h3>
 											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
-											<h1 align="center">8.0</h1>
+											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h1>
 										</div>
 									</div>
 								</div>
@@ -89,21 +89,25 @@
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(22, 175, 186); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(200, 49, 107); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
 										</div>
@@ -116,21 +120,25 @@
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
 										</div>
@@ -176,10 +184,10 @@
 										</div>
 										<div class="col-7 col-12-medium">
 											</br>
-											<h1 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h1>
+											<h1 align="center"><a href="#"><span style="font-size: 110%">Did You Know That There's a Tunnel Under Ocean Blvd</span></a></h1>
 											<h3 align="center">Lana Del Rey</h3>
 											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
-											<h1 align="center">8.0</h1>
+											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h1>
 										</div>
 									</div>
 								</div>
@@ -195,21 +203,25 @@
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
 										</div>
@@ -222,21 +234,25 @@
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 												<div class="col-3"><span class="image fit"><a href="#"><img src="images/pic01.jpg" alt=""/></a></span>
 													<h4 align="center"><a href="#">Did You Know That There's a Tunnel Under Ocean Blvd</a></h4>
 													<h5 align="center">Lana Del Rey</h5>
 													<p align="center">Genre:Pop<br />Release date:2023.01.01</p>
+													<h5 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h5>
 												</div>
 											</div>
 										</div>
@@ -277,20 +293,20 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+							<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+							<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+							<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Copyright:SennerWang</li>
+						</ul>
+					</div>
+				</footer>
 
 			</div>
 
