--- a/Journal Entries/xiezaibiyeqianxi.html
+++ b/Journal Entries/xiezaibiyeqianxi.html
@@ -30,10 +30,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="../index.html">Home</a></li>
-							<li><a href="../Instruction.html">Introduction</a></li>
+							<li><a href="../Biography.html">Biography</a></li>
 							<li><a href="../Scientific Works/homepage.html">Scientific Works</a></li>
 							<li><a href="../Notes/homepage.html">Notes</a></li>
-							<li><a href="../Musical Column/homepage.html">Musical Column</a></li>
+							<li><a href="../musical column/homepage.html">Musical Column</a></li>
 							<li><a href="../Journal Entries/homepage.html">Journal Entries</a></li>
 							<li><a href="../Album/homepage.html">Album</a></li>
 						</ul>
@@ -52,12 +52,12 @@
 										<h1>写在毕业前夕</h1>
 										<h2>2023.6.16</h2>
 									</header>
-									<p><span class="image right"><img src="images/pic01.jpg" alt="" /></span> &emsp;&emsp;人一生会经历几次毕业呢？<br />
+									<p><span class="image right"><img src="images/8.jpg" alt="" /></span> &emsp;&emsp;人一生会经历几次毕业呢？<br />
 										&emsp;&emsp;随着年岁的增长，过去四年习以为常的日子最终也只成了个人简历上简简单单的一行字。常说一切的过去都成就了今天的我，但如今的我又会在无数个独自的夜晚幻想回到十年前再重新经历一遍过去。无论是走在兰州的大街小巷亦或是在科大的校园中，我总是在努力回忆着在何时此地曾为什么而匆匆忙忙。如果不是毕业这样的节点，或许我们也不会花时间来审视自己，想想曾错过些什么。每每临近这些特定的时刻，我们却只能暗自叹息：又是三年、又是四年。光阴如梭向来不是空穴来风，好像昨天我才拿着录取通知书在弘毅院门口，期待着大学的生活......<br />
 										&emsp;&emsp;在回科大做毕业论文答辩的一周间，尽管始终有繁琐的毕业事务缠身，但每天都能和几个要好的同学胡吃海喝，顺便分享分享近来的生活，嘴皮也从早到晚基本没歇过几小时。与大家交谈之中我惊异地发现：尽管相隔异地只有半年之久，谈论的话题却已跳脱出过去四年中曾占据全部生活的学习和科研。如今每个人更关注的确乎是不同生活状态下个人情感或情绪的变化。每逢毕业季，无可否认所有人都有着面对未知的焦虑，难能可贵的是大家都已经有了为到达彼岸做出的最终选择。我第一次发觉，过去四年中似乎获得了比完整知识体系更重要的东西：是一种看到人生不同选择和可能性的宽阔、是一种能切身从客观角度思考问题和对别人的尊重、更是一种面对未来选择最不安定那条路的勇气和豁达。</p>
-									<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>  &emsp;&emsp;曾经觉得把呆过的地方称作“家”有点故作姿态，但如今确实有了离开前的流连。除了一遍又一遍逛着科大的每个角落，也想再多看看合肥这座城市。地图上的地标着实都去过了一遍，好不容易找了尚未修缮完全的方兴湖便动身出发了。在tf的陪同下，在这里感受到了久违的宁静。忙碌的日子不曾有如此闲情逸致，我似乎更愿意把滨湖作为我对这座城市最后的印象：它一反常态，却独树一帜。<br />
+									<p><span class="image left"><img src="images/9.jpg" alt="" /></span>  &emsp;&emsp;曾经觉得把呆过的地方称作“家”有点故作姿态，但如今确实有了离开前的流连。除了一遍又一遍逛着科大的每个角落，也想再多看看合肥这座城市。地图上的地标着实都去过了一遍，好不容易找了尚未修缮完全的方兴湖便动身出发了。在tf的陪同下，在这里感受到了久违的宁静。忙碌的日子不曾有如此闲情逸致，我似乎更愿意把滨湖作为我对这座城市最后的印象：它一反常态，却独树一帜。<br />
 										&emsp;&emsp;回京前又去了趟熟悉的杭州，也再次近距离感受了一下浙大的开阔和浙大同学的热情。在科大的记忆多数是图书馆与实验室，过去每个戴着耳机低头思索的夜晚确乎是塑造了如今的我。然而，浙大却给人留下了不同的零星记忆：广阔的草坪和庄重的建筑。从学长口中曾听说过去友校间交流蛮频繁的，只能说该死的疫情还是让人失去了很多东西与机会，也只能寄希望于读博期间一一补回来了！</p>
-									<p><span class="image right"><img src="images/pic01.jpg" alt="" /></span> &emsp;&emsp;在whw的怂恿下，找到浙大的学生文化长廊拼了个USTC和PKU，想起过去穿着科大的衣服在校园里走来走去的日子已经是两年前了。不变的是紫荆港嘎嘎叫的大鹅，已然变化的是如今朋友们有了各自的路。非常感谢whw和wlw每次都能抽时间带着我晃荡几天。过去几年在科大较为保守环境下性格渐渐收敛，浙大同学的热情着实让我这个“社恐”不知所措。晚上吃饭的时候，朋友说了一句我很认同的话：“大学让我知道，学习真的很重要，但生活中还有许多很重要的东西，它让我找到方向，也慢慢和自己和解了。” 那么对于我的意义是什么？或许五年后能汇聚成一句话，或许不会。人一切的内需推动着自己的行为，如何正面自己的内需即是每个人一辈子的课题。<br />
+									<p><span class="image right"><img src="images/10.jpg" alt="" /></span> &emsp;&emsp;在whw的怂恿下，找到浙大的学生文化长廊拼了个USTC和PKU，想起过去穿着科大的衣服在校园里走来走去的日子已经是两年前了。不变的是紫荆港嘎嘎叫的大鹅，已然变化的是如今朋友们有了各自的路。非常感谢whw和wlw每次都能抽时间带着我晃荡几天。过去几年在科大较为保守环境下性格渐渐收敛，浙大同学的热情着实让我这个“社恐”不知所措。晚上吃饭的时候，朋友说了一句我很认同的话：“大学让我知道，学习真的很重要，但生活中还有许多很重要的东西，它让我找到方向，也慢慢和自己和解了。” 那么对于我的意义是什么？或许五年后能汇聚成一句话，或许不会。人一切的内需推动着自己的行为，如何正面自己的内需即是每个人一辈子的课题。<br />
 										&emsp;&emsp;虽然回京后还面临着考虑之后具体方向的问题，但在看看文献之外决定什么都不想给自己放一小段时间假，毕竟这样的生活不可多得。值得庆幸地是过去三个多月的工作有了一个还不错的结果，也算是给在北京的这段日子做了一个交待。其余的事情就放在之后慢慢考虑吧！如今想的是两个月后的新生活，生命中的人总是有来有去，或许回忆才是每个出现在我生活中人带给我的最终意义。<br />
 										&emsp;&emsp;说到这儿，似乎又更期待回去和老师、朋友们约饭拍毕业照的几天了，自己的学士服还没能穿，顺便了却一些还没有完成的遗憾。对了，还有最后一次回兰州招生，也算是脱科前给母校最后的一点贡献吧。</p>
 								</div>
@@ -74,21 +74,20 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Copyright:SennerWang</li><!--<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>-->
-							</ul>
-						</div>
-					</footer>
-
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="../images/wechat/1.jpg" class="icon brands alt fa-weixin"><span class="label"><img src="../images/wechat/1.jpg" alt=""></span></a></li>
+							<li><a href="../images/qq/1.jpg" class="icon brands alt fa-qq"><span class="label"><img src="../images/qq/1.jpg" alt=""></span></a></li>
+							<li><a href="#" class="icon brands alt fa-google"><span class="label"></span></a></li>
+							<li><a href="https://github.com/SennerWang/SennerWang.github.io" class="icon brands alt fa-github"><span class="label"></span></a></li>
+							<li><a href="https://www.zhihu.com/people/yo-reaper" class="icon brands alt fa-zhihu"><span class="label"></span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Copyright:SennerWang</li>
+						</ul>
+					</div>
+				</footer>
 			</div>
 
 		<!-- Scripts -->
