--- a/Musical Column/Reviews/Name.html
+++ b/Musical Column/Reviews/Name.html
@@ -13,7 +13,7 @@
 			<div id="wrapper">
 
 				<header id="header" class="alt style2">
-					<a href="../index.html" class="logo"><strong>Yusen Wang</strong> <span>Home</span></a>
+					<a href="../../index.html" class="logo"><strong>Yusen Wang</strong> <span>Home</span></a>
 					<nav>
 						<a href="#menu">Menu</a>
 					</nav>
