--- a/musical column/homepage.html
+++ b/musical column/homepage.html
@@ -180,11 +180,11 @@
 								<div class="inner">
 									<div class="row">
 										<div class="col-5 col-12-medium">
-											<a href="#"><span class="image fit"><img href="#" src="images/pic01.jpg" alt="" /></span></a>
+											<a href="Reviews/Name.html"><span class="image fit"><img href="Reviews/Name.html" src="images/pic01.jpg" alt="" /></span></a>
 										</div>
 										<div class="col-7 col-12-medium">
 											</br>
-											<h1 align="center"><a href="#"><span style="font-size: 110%">Did You Know That There's a Tunnel Under Ocean Blvd</span></a></h1>
+											<h1 align="center"><a href="Reviews/Name.html"><span style="font-size: 110%">Did You Know That There's a Tunnel Under Ocean Blvd</span></a></h1>
 											<h3 align="center">Lana Del Rey</h3>
 											<p align="center">Genre:Pop&emsp;&emsp;&emsp;Release date:2023.01.01</p>
 											<h1 class="major" align="center"><span style="background-color: rgb(81, 36, 242); padding: 10px; border: 2px solid #ffffff; border-radius: 30%;color: #fff;font-size: 120%">8.0</span></h1>
